<?xml version="1.0" encoding="utf-8"?>
<!--Hoang Nguyen 24-3-2019-->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeDetails">

    <TextView
        android:id="@+id/detailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/detail_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="1dp"
        android:contentDescription="@string/imagedesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailTitle"
        tools:srcCompat="@tools:sample/avatars[0]" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="552dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ingredientTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredientsTitle"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="257dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingredients"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="355dp" />

            <TextView
                android:id="@+id/directionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/directionsTitle"
                tools:layout_editor_absoluteX="67dp"
                tools:layout_editor_absoluteY="257dp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/directions"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/directions"
                tools:layout_editor_absoluteX="70dp"
                tools:layout_editor_absoluteY="355dp" />
        </LinearLayout>
    </ScrollView>



</android.support.constraint.ConstraintLayout>